--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -149,7 +149,7 @@
                 android:background="@drawable/round_corner"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="10dp"
-                android:paddingVertical="15dp"
+                android:paddingVertical="18dp"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical">
 
@@ -159,6 +159,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_phone_number"
                     android:textSize="17sp"
+                    android:background="@null"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
@@ -179,7 +181,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
-                android:paddingVertical="15dp"
+                android:paddingVertical="18dp"
                 android:layout_marginTop="6dp"
                 android:background="@drawable/round_corner"
                 android:layout_gravity="center_vertical"
@@ -191,6 +193,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_email"
                     android:textSize="17sp"
+                    android:background="@null"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
@@ -211,7 +215,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
-                android:paddingVertical="15dp"
+                android:paddingVertical="18dp"
                 android:layout_marginTop="6dp"
                 android:background="@drawable/round_corner"
                 android:layout_gravity="center_vertical"
@@ -223,6 +227,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_default_password"
                     android:textSize="17sp"
+                    android:background="@null"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
@@ -243,7 +249,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
-                android:paddingVertical="15dp"
+                android:paddingVertical="18dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/round_corner"
@@ -256,6 +262,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/location"
                     android:textSize="17sp"
+                    android:background="@null"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
@@ -286,7 +294,7 @@
             android:fontFamily="@font/avenir"
             android:textStyle="bold"
             android:layout_marginTop="15dp"
-            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/client_d_card"/>
@@ -300,7 +308,7 @@
             android:layout_marginVertical="20dp"
             app:cardElevation="8dp"
             android:padding="20dp"
-            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.12"
             android:layout_marginBottom="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -311,13 +319,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="20dp"
+                android:padding="40dp"
                 android:layout_gravity="center"
                 android:gravity="center">
 
                 <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:src="@drawable/png_add_pro"/>
 
                 <TextView
