--- a/app/src/main/res/layout/activity_hotels_locations.xml
+++ b/app/src/main/res/layout/activity_hotels_locations.xml
@@ -38,17 +38,18 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/mapView"
-        android:layout_width="370dp"
-        android:layout_height="500dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         map:layout_constraintTop_toBottomOf="@+id/individual_HotelImage"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:clickable="true"
+        android:apiKey="AIzaSyC7qNJBepL9gkSOmXO2YQcD_vNKXskTtBQ"
         map:uiCompass="true"
         map:zOrderOnTop="true"
         map:uiZoomControls="true"
-        android:background="#8F8F8F"
+
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
