--- a/app/src/main/res/layout/activity_client_countries.xml
+++ b/app/src/main/res/layout/activity_client_countries.xml
@@ -23,6 +23,7 @@
             android:textSize="30dp"
             android:textColor="#383842"
             android:layout_marginTop="45dp"
+            android:fontFamily="@font/avenir"
             android:textStyle="normal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,7 @@
             android:layout_marginRight="30dp"
             android:background="@drawable/searchbox2"
             android:textSize="18dp"
+            android:fontFamily="@font/avenir"
             android:paddingLeft="35dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
