--- a/app/src/main/res/layout/activity_client_info.xml
+++ b/app/src/main/res/layout/activity_client_info.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/Client_Name"
         android:textSize="30dp"
-        android:fontFamily="@font/average"
+        android:fontFamily="@font/avenir"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        android:fontFamily="@font/average"
+        android:fontFamily="@font/avenir"
         android:textStyle="normal"
         android:textColor="@color/black"
         tools:ignore="MissingConstraints" />
@@ -91,6 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/client_number"
+            android:fontFamily="@font/avenir"
             android:textColor="#95959D"
             android:textSize="16dp"
             />
@@ -100,6 +101,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/client_address"
             android:textColor="#95959D"
+            android:fontFamily="@font/avenir"
             android:layout_below="@+id/client_number"
             android:layout_marginTop="5dp"
             android:textSize="16dp"
@@ -142,7 +144,7 @@
         android:text="Recent Properties"
         android:textSize="26sp"
         android:textStyle="bold"
-        android:fontFamily="@font/arvo"
+        android:fontFamily="@font/avenir"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/ooo"
         app:layout_constraintStart_toStartOf="parent"
