--- a/app/src/main/res/layout/activity_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screen.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="710dp"
         tools:ignore="MissingConstraints"
+        android:fontFamily="@font/avenir"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="40dp"
         android:text="SKIP"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="710dp"
+        android:fontFamily="@font/avenir"
         tools:ignore="MissingConstraints"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="40dp"
