--- a/app/src/main/res/layout/bookmarkscreen.xml
+++ b/app/src/main/res/layout/bookmarkscreen.xml
@@ -23,6 +23,7 @@
             android:id="@+id/bookmark_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir"
             android:layout_below="@+id/bookmark_Image"
             android:textSize="18dp"
             android:textColor="@color/black"
@@ -43,6 +44,7 @@
             android:id="@+id/bookmark_Rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir"
             android:layout_below="@id/bookmark_Name"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="37dp"
