--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -148,7 +148,7 @@
             android:id="@+id/linkdin_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/linkdin"
+            android:src="@drawable/linkedin"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias="0.55"
             app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +170,7 @@
             android:id="@+id/ullu"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/gg"
+            android:src="@drawable/tripadvisor"
             android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_bias="0.55"
             app:layout_constraintStart_toStartOf="parent"
