--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -131,8 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="25dp"
-        android:layout_marginVertical="20dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_margin="20dp"
         app:cardElevation="7dp"
         app:layout_constraintTop_toBottomOf="@id/client_name_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -305,12 +304,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            android:layout_marginVertical="20dp"
+            android:layout_margin="20dp"
             app:cardElevation="8dp"
             android:padding="20dp"
-            app:layout_constraintHorizontal_bias="0.12"
             android:layout_marginBottom="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/add_prop_text"
             app:layout_constraintStart_toStartOf="parent">
