--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -22,6 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
         android:text="  All Clients"
+        android:fontFamily="@font/avenir"
         android:textSize="18dp"
         android:layout_marginLeft="20dp"
         android:textColor="@color/black"
@@ -33,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/average"
+        android:fontFamily="@font/avenir"
         android:textStyle="bold"
         android:text="Retvens"
         android:textSize="25dp"
@@ -61,6 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
+        android:fontFamily="@font/avenir"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/searchbox"
@@ -112,6 +114,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="50dp"
+            android:fontFamily="@font/avenir"
             android:layout_marginTop="600dp"
             android:textColor="@color/black"
             android:textSize="20dp"
