--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -52,7 +52,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="94dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         android:text="@string/title"
                         android:textSize="35dp"
                         android:textColor="@color/black"
@@ -70,6 +70,7 @@
                         android:layout_marginLeft="30dp"
                         android:layout_marginEnd="30dp"
                         android:layout_marginRight="30dp"
+                        android:fontFamily="@font/avenir"
                         android:background="@drawable/searchbox"
                         android:textSize="18dp"
                         android:paddingLeft="35dp"
@@ -125,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="10dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         android:paddingLeft="15dp"
                         android:text="Recent Countries"
                         android:textColor="@color/black"
@@ -138,6 +139,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="33dp"
                         android:paddingStart="15dp"
+                        android:fontFamily="@font/avenir"
                         android:text="@string/title2"
                         android:textSize="13sp"
                         tools:ignore="RtlSymmetry" />
@@ -158,7 +160,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/countryRecycler"
                         android:layout_marginTop="10dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         android:paddingLeft="15dp"
                         android:text="Recent Properties"
                         android:textColor="@color/black"
@@ -171,7 +173,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/countryRecycler"
                         android:layout_marginTop="10dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         android:paddingRight="20dp"
                         android:text="View all latest"
                         android:layout_alignParentRight="true"
@@ -212,7 +214,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_marginTop="10dp"
                         android:paddingLeft="15dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         />
 
                     <TextView
@@ -226,7 +228,7 @@
                         android:textSize="15dp"
                         android:layout_marginTop="10dp"
                         android:paddingLeft="15dp"
-                        android:fontFamily="@font/average"
+                        android:fontFamily="@font/avenir"
                         android:paddingRight="15dp"
                         />
 
