--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -31,6 +31,7 @@
         android:layout_marginLeft="30dp"
         android:textColor="@color/black"
         android:text="Retvens"
+        android:fontFamily="@font/avenir"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="5dp"
         android:textSize="25dp"
@@ -46,6 +47,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="70dp"
         android:layout_below="@+id/user_name"
+        android:fontFamily="@font/avenir"
         android:text="Admin"
         android:textSize="18dp"
 
