--- a/app/src/main/res/layout/item_recent_properties.xml
+++ b/app/src/main/res/layout/item_recent_properties.xml
@@ -66,7 +66,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_marginTop="4dp"
-                android:src="@drawable/png_google"
+                android:src="@drawable/google"
                 app:layout_constraintStart_toEndOf="@id/hotel_profile"
                 app:layout_constraintTop_toBottomOf="@id/hotel_location" />
 
@@ -88,7 +88,7 @@
                 android:layout_height="16dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="5dp"
-                android:src="@drawable/greview"
+                android:src="@drawable/tripadvisor"
                 app:layout_constraintStart_toEndOf="@id/hotel_profile"
                 app:layout_constraintTop_toBottomOf="@id/hotel_google_review"
                 app:layout_constraintBottom_toBottomOf="parent"
