add property, calendar, ...

--- a/app/src/main/res/layout/clientcountryxml.xml
+++ b/app/src/main/res/layout/clientcountryxml.xml
@@ -81,8 +81,8 @@
             app:layout_constraintBottom_toBottomOf="@id/clientImage"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/png_phone_call"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
@@ -93,9 +93,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/png_whatsappp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/whatsapp"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
@@ -105,8 +105,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
          <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+             android:layout_width="20dp"
+             android:layout_height="20dp"
             android:src="@drawable/png_msg"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
