--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -158,6 +158,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_phone_number"
                     android:textSize="17sp"
+                    android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -193,6 +194,7 @@
                     android:hint="@string/enter_email"
                     android:textSize="17sp"
                     android:background="@null"
+                    android:textColor="@color/add_details"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
                     android:layout_centerVertical="true"
@@ -226,6 +228,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_default_password"
                     android:textSize="17sp"
+                    android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
@@ -261,6 +264,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/location"
                     android:textSize="17sp"
+                    android:textColor="@color/add_details"
                     android:background="@null"
                     style="@style/TextAppearance.AppCompat.Body1"
                     android:fontFamily="@font/avenir"
