--- a/app/src/main/res/layout/activity_recent_properties_view.xml
+++ b/app/src/main/res/layout/activity_recent_properties_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,13 +10,11 @@
         android:id="@+id/properties_back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_bias=".05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias=".05"
-        app:srcCompat="@drawable/back_btn" />
+        app:srcCompat="@drawable/back_btn"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,60 +25,48 @@
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/properties_back_btn"
-        app:layout_constraintStart_toEndOf="@id/properties_back_btn"
-        app:layout_constraintBottom_toBottomOf="@id/properties_back_btn"/>
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@id/properties_back_btn"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/search_bar"
+    <RelativeLayout
+        android:id="@+id/relative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        android:background="@color/light_grey"
         android:layout_margin="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/properties_back_btn">
+        android:padding="10dp"
+        android:background="@drawable/round_low"
+        android:layout_below="@id/properties_back_btn">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginStart="8dp"
-            android:orientation="horizontal">
+            android:src="@drawable/ic_baseline_search_24"
+            app:tint="@color/add_details"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"/>
+        <EditText
+            android:id="@+id/search_property"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/try_to_enter_any_hotel_name"
+            android:textSize="14sp"
+            android:textColorHint="@color/add_details"
+            android:background="@null"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_marginStart="40dp"
+            android:layout_centerVertical="true"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_search_24"/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/try_to_enter_any_hotel_name"
-                android:textColorHint="#ABB3BB"
-                android:outlineSpotShadowColor="#ABB3BB"
-                android:outlineAmbientShadowColor="#ABB3BB"/>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
+    </RelativeLayout>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="55dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_bar">
+        android:layout_below="@id/relative">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#c1c1c1"
-                android:layout_marginVertical="8dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_properties"
@@ -122,4 +108,4 @@
 
     </androidx.core.widget.NestedScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
