--- a/app/src/main/res/layout/activity_view_all_tasks.xml
+++ b/app/src/main/res/layout/activity_view_all_tasks.xml
@@ -6,68 +6,76 @@
     android:layout_height="match_parent"
     tools:context=".RecentProperties.ViewAllTasks">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/tasks_back_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        app:srcCompat="@drawable/back_btn"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"/>
 
-        <ImageView
-            android:id="@+id/tasks_back_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias=".05"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias=".05"
-            app:srcCompat="@drawable/back_btn" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recent_properties"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/avenir"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@id/tasks_back_btn"/>
 
-        <TextView
-            android:id="@+id/all_tasks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/all_tasks"
-            android:textSize="26sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/avenir"
-            android:textColor="@color/black"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="@id/tasks_back_btn"
-            app:layout_constraintStart_toEndOf="@id/tasks_back_btn"
-            app:layout_constraintBottom_toBottomOf="@id/tasks_back_btn"/>
+    <RelativeLayout
+        android:id="@+id/relative"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:padding="10dp"
+        android:background="@drawable/round_low"
+        android:layout_below="@id/tasks_back_btn">
 
-
-        <EditText
-            android:id="@+id/search_Bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:paddingLeft="35dp"
-            android:paddingTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/all_tasks"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:hint="Search" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_search_24"
-            app:layout_constraintStart_toStartOf="parent"
+            app:tint="@color/add_details"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"/>
+        <EditText
+            android:id="@+id/search_tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/try_to_enter_any_hotel_name"
+            android:textSize="14sp"
+            android:textColorHint="@color/add_details"
+            android:background="@null"
+            style="@style/TextAppearance.AppCompat.Body1"
             android:layout_marginStart="40dp"
-            android:layout_alignParentStart="true"
-            app:layout_constraintTop_toTopOf="@id/search_Bar"
-            app:layout_constraintBottom_toBottomOf="@id/search_Bar"/>
+            android:layout_centerVertical="true"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
+
+    <TextView
+        android:id="@+id/tv_date_month"
+        style="@style/TextAppearance.MaterialComponents.Subtitle2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/relative"
+        tools:text="December 2020" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_below="@id/tv_date_month"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -76,7 +84,7 @@
             android:layout_alignParentEnd="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/constraint"
+            android:layout_below="@id/recyclerViewDate"
            />
 
         <com.facebook.shimmer.ShimmerFrameLayout
@@ -85,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/constraint"
+            android:layout_below="@id/recyclerViewDate"
             tools:ignore="MissingConstraints">
 
             <LinearLayout
