--- a/app/src/main/res/layout/clientcountryxml.xml
+++ b/app/src/main/res/layout/clientcountryxml.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="120dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textSize="16sp"
+            android:textFontWeight="600"
+            android:textSize="20sp"
             android:fontFamily="@font/avenir"
             android:textStyle="normal"
             android:textColor="#092C4C"
@@ -54,31 +55,33 @@
             android:id="@+id/NumberOfClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+91 7905845935"
-            android:textSize="12sp"
-            android:fontFamily="@font/avenir"
-            android:textStyle="normal"
-            android:textColor="#95959D"
             android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="0.62"
-            app:layout_constraintTop_toTopOf="@id/clientImage"
+            android:layout_marginTop="60dp"
+            android:fontFamily="@font/avenir"
+            android:text="+91 7905845935"
+            android:textColor="#95959D"
+            android:textSize="15sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@id/clientImage"
             app:layout_constraintStart_toEndOf="@id/clientImage"
-            app:layout_constraintBottom_toBottomOf="@id/clientImage"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.384" />
 
         <TextView
             android:id="@+id/addOfClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mumbai,India"
-            android:textSize="12sp"
-            android:fontFamily="@font/avenir"
-            android:textStyle="normal"
-            android:textColor="#95959D"
             android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="1"
-            app:layout_constraintTop_toTopOf="@id/clientImage"
+            android:layout_marginTop="80dp"
+            android:fontFamily="@font/avenir"
+            android:text="Mumbai,India"
+            android:textColor="#95959D"
+            android:textSize="15sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@id/clientImage"
             app:layout_constraintStart_toEndOf="@id/clientImage"
-            app:layout_constraintBottom_toBottomOf="@id/clientImage"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -93,9 +96,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/png_whatsappp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/whatsapp"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
@@ -120,7 +123,7 @@
 
         <ImageView
             android:layout_width="22dp"
-            android:layout_height="110dp"
+            android:layout_height="120dp"
             android:src="@drawable/png_rectangle"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
