--- a/app/src/main/res/layout/bookmarkscreen.xml
+++ b/app/src/main/res/layout/bookmarkscreen.xml
@@ -26,9 +26,10 @@
             android:fontFamily="@font/avenir"
             android:layout_below="@+id/bookmark_Image"
             android:textSize="18dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
+            android:textColor="#1E2432"
+            android:textStyle="normal"
             android:paddingLeft="15dp"
+
             />
 
         <ImageView
