--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.retvence.rscoop.DashBoard.DashBoard.AdminDashBoard.Profile.AddProperty">
+    tools:context="com.example.rscoop.DashBoard.DashBoard.AdminDashBoard.Profile.AddProperty">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
