--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -12,7 +12,7 @@
         android:padding="6dp">
 
     <ImageView
-        android:id="@+id/tasks_back_btn"
+        android:id="@+id/add_back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias=".05"
@@ -33,9 +33,9 @@
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/tasks_back_btn"
-        app:layout_constraintStart_toEndOf="@id/tasks_back_btn"
-        app:layout_constraintBottom_toBottomOf="@id/tasks_back_btn"/>
+        app:layout_constraintTop_toTopOf="@id/add_back_btn"
+        app:layout_constraintStart_toEndOf="@id/add_back_btn"
+        app:layout_constraintBottom_toBottomOf="@id/add_back_btn"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
