--- a/app/src/main/res/layout/activity_hotels_locations.xml
+++ b/app/src/main/res/layout/activity_hotels_locations.xml
@@ -24,7 +24,7 @@
             android:textFontWeight="800"
             android:textStyle="normal"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/backarrow"
+            app:layout_constraintStart_toStartOf="@+id/hotels_back"
             android:layout_marginLeft="20dp"
             tools:ignore="MissingConstraints" />
 
@@ -56,7 +56,7 @@
             />
 
         <ImageView
-            android:id="@+id/backarrow"
+            android:id="@+id/hotels_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_btn"
