--- a/app/src/main/res/layout/activity_view_all_tasks.xml
+++ b/app/src/main/res/layout/activity_view_all_tasks.xml
@@ -32,29 +32,33 @@
         android:id="@+id/relative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:padding="10dp"
+        android:layout_below="@id/tasks_back_btn"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/round_low"
-        android:layout_below="@id/tasks_back_btn">
+        android:padding="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_search_24"
-            app:tint="@color/add_details"
+            android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"/>
+            android:src="@drawable/ic_baseline_search_24"
+            app:tint="@color/add_details" />
+
         <EditText
             android:id="@+id/search_tasks"
+            style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/try_to_enter_any_hotel_name"
-            android:textSize="14sp"
-            android:textColorHint="@color/add_details"
-            android:background="@null"
-            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_centerVertical="true"
             android:layout_marginStart="40dp"
-            android:layout_centerVertical="true"/>
+            android:background="@null"
+            android:hint="@string/try_to_enter_any_hotel_name"
+            android:textColorHint="@color/add_details"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
