--- a/app/src/main/res/layout/activity_admin_dash_board.xml
+++ b/app/src/main/res/layout/activity_admin_dash_board.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1F2F6"
-    tools:context="com.example.rscoop.DashBoard.DashBoard.AdminDashBoard.AdminDashBoard">
+    tools:context="com.retvence.rscoop.DashBoard.DashBoard.AdminDashBoard.AdminDashBoard">
 
 <!--        <com.google.android.material.navigation.NavigationView-->
 <!--        android:layout_width="wrap_content"-->
