--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".DashBoard.DashBoard.AdminDashBoard.NavigationFragment.TodoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="todo" />
+        android:layout_marginTop="100dp"
+        android:textSize="25dp"
+        android:text="It will be Completed by Monday!!" />
 
 </FrameLayout>
